// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calls remove when FileProgress remove button clicked 1`] = `
<FileList
  files={
    Array [
      Object {
        "name": "asdf",
      },
    ]
  }
  removeFile={[Function]}
>
  <div
    className="File-List"
  >
    <header
      className="File-List-Header"
    >
      <p
        className="File-List-Title"
      >
        1
         
        Files
      </p>
      <Button
        className="Clear-Button"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="Button"
          disabled={false}
          onClick={[Function]}
        >
          - Clear
        </button>
      </Button>
    </header>
    <ul
      className="List"
    >
      <TransitionGroup>
        <div>
          <ListItem
            active={false}
            alternate={true}
            className="item-0"
            key="asdf"
            onClick={[Function]}
            remove={[Function]}
          >
            <CSSTransition
              classNames="item"
              in={false}
              timeout={300}
              unmountOnExit={true}
            >
              <div />
            </CSSTransition>
          </ListItem>
        </div>
      </TransitionGroup>
    </ul>
  </div>
</FileList>
`;

exports[`contains 3 FileProgress when 3 added 1`] = `
<div
  class="File-List"
>
  <header
    class="File-List-Header"
  >
    <p
      class="File-List-Title"
    >
      3 Files
    </p>
    <button
      class="Button"
    >
      - Clear
    </button>
  </header>
  <ul
    class="List"
  >
    <div>
      <div>
        <div>
          <li
            class="ListItem"
          >
            <div>
              <span
                class="ListItem-Child"
              >
                <div
                  class="FileResult"
                >
                  <span
                    class="FileResult-Name"
                  >
                    asdf
                  </span>
                </div>
              </span>
            </div>
          </li>
        </div>
      </div>
      <div>
        <div>
          <li
            class="ListItem"
          >
            <div>
              <span
                class="ListItem-Child"
              >
                <div
                  class="FileResult"
                >
                  <span
                    class="FileResult-Name"
                  >
                    demo
                  </span>
                </div>
              </span>
            </div>
          </li>
        </div>
      </div>
      <div>
        <div>
          <li
            class="ListItem"
          >
            <div>
              <span
                class="ListItem-Child"
              >
                <div
                  class="FileResult"
                >
                  <span
                    class="FileResult-Name"
                  >
                    test
                  </span>
                </div>
              </span>
            </div>
          </li>
        </div>
      </div>
    </div>
  </ul>
</div>
`;

exports[`does not mark the ListItem as alternate when active is negative. 1`] = `
<FileList
  active={-1}
  files={
    Array [
      Object {
        "name": "asdf",
      },
      Object {
        "name": "demo",
      },
    ]
  }
>
  <div
    className="File-List"
  >
    <header
      className="File-List-Header"
    >
      <p
        className="File-List-Title"
      >
        2
         
        Files
      </p>
      <Button
        className="Clear-Button"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="Button"
          disabled={false}
          onClick={[Function]}
        >
          - Clear
        </button>
      </Button>
    </header>
    <ul
      className="List"
    >
      <TransitionGroup>
        <div>
          <ListItem
            active={false}
            alternate={true}
            className="item-0"
            key="asdf"
            onClick={[Function]}
            remove={[Function]}
          >
            <CSSTransition
              classNames="item"
              in={true}
              timeout={300}
              unmountOnExit={true}
            >
              <div>
                <div>
                  <li
                    className="ListItem"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <div>
                      <span
                        className="ListItem-Child"
                        onClick={[Function]}
                      >
                        <FileResult>
                          <div
                            className="FileResult"
                          >
                            <span
                              className="FileResult-Name"
                            >
                              asdf
                            </span>
                          </div>
                        </FileResult>
                      </span>
                    </div>
                  </li>
                </div>
              </div>
            </CSSTransition>
          </ListItem>
          <ListItem
            active={false}
            alternate={true}
            className="item-1"
            key="demo"
            onClick={[Function]}
            remove={[Function]}
          >
            <CSSTransition
              classNames="item"
              in={true}
              timeout={300}
              unmountOnExit={true}
            >
              <div>
                <div>
                  <li
                    className="ListItem"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <div>
                      <span
                        className="ListItem-Child"
                        onClick={[Function]}
                      >
                        <FileResult>
                          <div
                            className="FileResult"
                          >
                            <span
                              className="FileResult-Name"
                            >
                              demo
                            </span>
                          </div>
                        </FileResult>
                      </span>
                    </div>
                  </li>
                </div>
              </div>
            </CSSTransition>
          </ListItem>
        </div>
      </TransitionGroup>
    </ul>
  </div>
</FileList>
`;

exports[`does not mark the ListItem as alternate when active is out of bounds. 1`] = `
<FileList
  active={3}
  files={
    Array [
      Object {
        "name": "asdf",
      },
      Object {
        "name": "demo",
      },
    ]
  }
>
  <div
    className="File-List"
  >
    <header
      className="File-List-Header"
    >
      <p
        className="File-List-Title"
      >
        2
         
        Files
      </p>
      <Button
        className="Clear-Button"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="Button"
          disabled={false}
          onClick={[Function]}
        >
          - Clear
        </button>
      </Button>
    </header>
    <ul
      className="List"
    >
      <TransitionGroup>
        <div>
          <ListItem
            active={false}
            alternate={true}
            className="item-0"
            key="asdf"
            onClick={[Function]}
            remove={[Function]}
          >
            <CSSTransition
              classNames="item"
              in={true}
              timeout={300}
              unmountOnExit={true}
            >
              <div>
                <div>
                  <li
                    className="ListItem"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <div>
                      <span
                        className="ListItem-Child"
                        onClick={[Function]}
                      >
                        <FileResult>
                          <div
                            className="FileResult"
                          >
                            <span
                              className="FileResult-Name"
                            >
                              asdf
                            </span>
                          </div>
                        </FileResult>
                      </span>
                    </div>
                  </li>
                </div>
              </div>
            </CSSTransition>
          </ListItem>
          <ListItem
            active={false}
            alternate={true}
            className="item-1"
            key="demo"
            onClick={[Function]}
            remove={[Function]}
          >
            <CSSTransition
              classNames="item"
              in={true}
              timeout={300}
              unmountOnExit={true}
            >
              <div>
                <div>
                  <li
                    className="ListItem"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <div>
                      <span
                        className="ListItem-Child"
                        onClick={[Function]}
                      >
                        <FileResult>
                          <div
                            className="FileResult"
                          >
                            <span
                              className="FileResult-Name"
                            >
                              demo
                            </span>
                          </div>
                        </FileResult>
                      </span>
                    </div>
                  </li>
                </div>
              </div>
            </CSSTransition>
          </ListItem>
        </div>
      </TransitionGroup>
    </ul>
  </div>
</FileList>
`;

exports[`marks the ListItem as alternate when active is set. 1`] = `
<FileList
  active={0}
  files={
    Array [
      Object {
        "name": "asdf",
      },
      Object {
        "name": "demo",
      },
    ]
  }
>
  <div
    className="File-List"
  >
    <header
      className="File-List-Header"
    >
      <p
        className="File-List-Title"
      >
        2
         
        Files
      </p>
      <Button
        className="Clear-Button"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="Button"
          disabled={false}
          onClick={[Function]}
        >
          - Clear
        </button>
      </Button>
    </header>
    <ul
      className="List"
    >
      <TransitionGroup>
        <div>
          <ListItem
            active={true}
            alternate={true}
            className="item-0"
            key="asdf"
            onClick={[Function]}
            remove={[Function]}
          >
            <CSSTransition
              classNames="item"
              in={true}
              timeout={300}
              unmountOnExit={true}
            >
              <div>
                <div>
                  <li
                    className="ListItem alternate"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <div>
                      <span
                        className="ListItem-Child"
                        onClick={[Function]}
                      >
                        <FileResult>
                          <div
                            className="FileResult"
                          >
                            <span
                              className="FileResult-Name"
                            >
                              asdf
                            </span>
                          </div>
                        </FileResult>
                      </span>
                    </div>
                  </li>
                </div>
              </div>
            </CSSTransition>
          </ListItem>
          <ListItem
            active={false}
            alternate={true}
            className="item-1"
            key="demo"
            onClick={[Function]}
            remove={[Function]}
          >
            <CSSTransition
              classNames="item"
              in={true}
              timeout={300}
              unmountOnExit={true}
            >
              <div>
                <div>
                  <li
                    className="ListItem"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <div>
                      <span
                        className="ListItem-Child"
                        onClick={[Function]}
                      >
                        <FileResult>
                          <div
                            className="FileResult"
                          >
                            <span
                              className="FileResult-Name"
                            >
                              demo
                            </span>
                          </div>
                        </FileResult>
                      </span>
                    </div>
                  </li>
                </div>
              </div>
            </CSSTransition>
          </ListItem>
        </div>
      </TransitionGroup>
    </ul>
  </div>
</FileList>
`;

exports[`marks the ListItem as alternate when active is set. 2`] = `
<FileList
  active={1}
  files={
    Array [
      Object {
        "name": "asdf",
      },
      Object {
        "name": "demo",
      },
    ]
  }
>
  <div
    className="File-List"
  >
    <header
      className="File-List-Header"
    >
      <p
        className="File-List-Title"
      >
        2
         
        Files
      </p>
      <Button
        className="Clear-Button"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="Button"
          disabled={false}
          onClick={[Function]}
        >
          - Clear
        </button>
      </Button>
    </header>
    <ul
      className="List"
    >
      <TransitionGroup>
        <div>
          <ListItem
            active={false}
            alternate={true}
            className="item-0"
            key="asdf"
            onClick={[Function]}
            remove={[Function]}
          >
            <CSSTransition
              classNames="item"
              in={true}
              timeout={300}
              unmountOnExit={true}
            >
              <div>
                <div>
                  <li
                    className="ListItem"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <div>
                      <span
                        className="ListItem-Child"
                        onClick={[Function]}
                      >
                        <FileResult>
                          <div
                            className="FileResult"
                          >
                            <span
                              className="FileResult-Name"
                            >
                              asdf
                            </span>
                          </div>
                        </FileResult>
                      </span>
                    </div>
                  </li>
                </div>
              </div>
            </CSSTransition>
          </ListItem>
          <ListItem
            active={true}
            alternate={true}
            className="item-1"
            key="demo"
            onClick={[Function]}
            remove={[Function]}
          >
            <CSSTransition
              classNames="item"
              in={true}
              timeout={300}
              unmountOnExit={true}
            >
              <div>
                <div>
                  <li
                    className="ListItem alternate"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <div>
                      <span
                        className="ListItem-Child"
                        onClick={[Function]}
                      >
                        <FileResult>
                          <div
                            className="FileResult"
                          >
                            <span
                              className="FileResult-Name"
                            >
                              demo
                            </span>
                          </div>
                        </FileResult>
                      </span>
                    </div>
                  </li>
                </div>
              </div>
            </CSSTransition>
          </ListItem>
        </div>
      </TransitionGroup>
    </ul>
  </div>
</FileList>
`;

exports[`prevents the remove button from showing when FileList has readonly property 1`] = `
<FileList
  files={
    Array [
      Object {
        "name": "asdf",
      },
    ]
  }
  readonly={true}
>
  <div
    className="File-List"
  >
    <header
      className="File-List-Header"
    >
      <p
        className="File-List-Title"
      >
        1
         
        Files
      </p>
    </header>
    <ul
      className="List"
    >
      <TransitionGroup>
        <div>
          <ListItem
            active={false}
            alternate={true}
            className="item-0"
            key="asdf"
            onClick={[Function]}
            remove={null}
          >
            <CSSTransition
              classNames="item"
              in={true}
              timeout={300}
              unmountOnExit={true}
            >
              <div>
                <div>
                  <li
                    className="ListItem"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <div>
                      <span
                        className="ListItem-Child"
                        onClick={[Function]}
                      >
                        <FileResult>
                          <div
                            className="FileResult"
                          >
                            <span
                              className="FileResult-Name"
                            >
                              asdf
                            </span>
                          </div>
                        </FileResult>
                      </span>
                    </div>
                  </li>
                </div>
              </div>
            </CSSTransition>
          </ListItem>
        </div>
      </TransitionGroup>
    </ul>
  </div>
</FileList>
`;

exports[`renders without crashing 1`] = `
<div
  class="File-List"
>
  <header
    class="File-List-Header"
  >
    <p
      class="File-List-Title"
    >
      0 Files
    </p>
    <button
      class="Button"
      disabled=""
    >
      - Clear
    </button>
  </header>
  <ul
    class="List"
  >
    <div>
      
    </div>
  </ul>
</div>
`;
